# anim-studio-tools

./: .hgignore  ProjectHome.md
bee/lib/: CMakeLists.txt  bee.h
bee/lib/gl/: Frame.cpp  Frame.h  GenericMesh.cpp  GenericMesh.h  Mesh.cpp  Mesh.h  PBO.cpp  PBO.h  Primitive2D.cpp  Primitive2D.h  Program.cpp  Program.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  ScopeHelpers.h  Shader.cpp  Shader.h  StateGroup.cpp  StateGroup.h  Texture.cpp  Texture.h  gl3.h  glError.cpp  glError.h  glExtensions.cpp  glExtensions.h  glext.h  streams.h
bee/lib/io/: Loader.cpp  Loader.h  MeshLoader.cpp  MeshLoader.h  ObjLoader.cpp  ObjLoader.h  TextureTools.cpp  TextureTools.h  VacLoader.cpp  VacLoader.h  dtexLoader.cpp  dtexLoader.h  ptcCell.cpp  ptcCell.h  ptcLoader.cpp  ptcLoader.h  ptcNode.cpp  ptcNode.h  ptcTree.cpp  ptcTree.h  ptcTreeBuilder.cpp  ptcTreeBuilder.h  textureLoader.cpp  textureLoader.h
bee/lib/kernel/: assert.h  classHelper.h  color.h  log.cpp  log.h  pythonHelper.h  smartPointers.h  spam.h  string.h  types.h
bee/lib/math/: Imath.cpp  Imath.h
bee/lib/scenegraph/: camera.cpp  camera.h
bee/py/lib/: CMakeLists.txt  build.sh  rootBindings.cpp
bee/py/lib/gl/: PyProgram.cpp  PyProgram.h  PyRenderTarget.cpp  PyRenderTarget.h  PyRenderer.h  PyTexture.cpp  PyTexture.h  bindings.cpp
bee/py/lib/io/: bindings.cpp
bee/py/lib/kernel/: bindings.cpp
bee/py/lib/scenegraph/: bindings.cpp
bee/samples/: CMakeLists.txt
bee/samples/data/cubetex/: grace_cube.rat
bee/samples/data/fromDavid/: masterPenguins.mtl  mumbleBodyCLR.tif  mumbleBodyCLRtest.tga
bee/samples/data/fromMaya/: hatchFull.tga
bee/samples/glsl/: edgeDetect.fs.glsl  test.fs.glsl  test.vs.glsl  test2D.fs.glsl  test2D.vs.glsl  testDefLit.fs.glsl  testDefLit.vs.glsl  testDefLitRelProto.fs.glsl  testGbuf.fs.glsl  testGbuf.vs.glsl  testGbuf4NPR.fs.glsl  testGbufSSAO.fs.glsl  testGbufSSAO.vs.glsl  testNPR.fs.glsl  testSSAO.fs.glsl  testSSAO.vs.glsl  testShadow.fs.glsl  testShadow.vs.glsl  testShadowUp.fs.glsl
bee/samples/src/: deferredLightingTest.cpp  deferredLightingTest.h  forwardLightingTest.cpp  forwardLightingTest.h  genericgl.cpp  genericgl.h  glSettings.cpp  glSettings.h  horizonBasedSSAO.cpp  horizonBasedSSAO.h  main.cpp  settings.ui  simpleHwShadowTest.cpp  simpleHwShadowTest.h  simpleRenderTargetTest.cpp  simpleRenderTargetTest.h  simpleToonShaderTest.cpp  simpleToonShaderTest.h  ui_settings.h  window.cpp  window.h
concorde/: CMakeLists.txt  concorde.py  package.yaml  ui.py
concorde/glsl/: default.fs.glsl  default.vs.glsl  disc.gs.glsl  disc.vs.glsl  display_vector.fs.glsl  display_vector.gs.glsl  display_vector.vs.glsl  point.fs.glsl  point.vs.glsl
concorde/ui/: AttribFloatWidget.ui  AttribIntWidget.ui  Concorde.ui  FrameWidget.ui
dgal/test/: CMakeLists.txt  kdtree_test.cpp  main.cpp
dgal/test/maya_plug/: mayaAdaptor.hpp  spatialQueryNode.cpp  spatialQueryNode.h
drd_color/: CMakeLists.txt  drd_color.xml  package.yaml
drd_color/share/mari/: mari_loadlut.py
drd_color/share/nuke/: ProjectViewer_Dreamcolor.gizmo  ProjectViewer_sRGB.gizmo  init.py
drd_color/share/ocio/hf2/: config.ocio  dreamcolor_detect.sh
drd_color/share/rv/Mu/: drd_color.mu  (+1 more)
drd_color/src/lutimages/: Kodak2383.tif  Kodak2383Cool.tif  Kodak2393.tif  Kodak2393PrintNeutralDispFlare.tif  identitycube32.tif  identitycube32_coolgrade.tif
grind/lib/: CMakeLists.txt
grind/lib/grind/: bbox.cpp  bbox.h  cl_vector.h  context.cpp  context.h  cube.cpp  cube.h  cuda_gl_interop_wrapper.cpp  cuda_gl_interop_wrapper.h  cuda_manager.cpp  cuda_manager.h  cuda_types.h  device_vector.h  device_vector_algorithms.cpp  device_vector_algorithms.cu  device_vector_algorithms.h  dump_info.cpp  dump_info.h  guide_params.h  guide_set.cpp  guide_set.cu  guide_set.h  hash_search.cpp  hash_search.cu  hash_search.h  host_vector.h  line_soup.cpp  line_soup.cu  line_soup.h  log.cpp  log.h  mesh.cpp  mesh.cu  mesh.h  mesh_subdivide.cpp  mesh_subdivide.cu  mesh_subdivide.h  mesh_subdivide_types.h  ocl_manager.cpp  ocl_manager.h  (+25 more)
grind/pylib/: CMakeLists.txt  python.cpp
h5cpp/lib/: CMakeLists.txt
h5cpp/lib/h5cpp/: attribute.cpp  attribute.hpp  close.cpp  close.hpp  dataset.cpp  dataset.hpp  datatype.cpp  datatype.hpp  error.cpp  error.hpp  file.cpp  file.hpp  group.cpp  group.hpp  h5cpp.h  hdf5_string.hpp  hid_adaptor.hpp  hid_types.cpp  hid_types.hpp  hid_wrap.hpp  hid_wrap_datatype.cpp  hid_wrap_datatype.h  is_constant.cpp  is_constant.h  meta.hpp  object.cpp  object.hpp  proplist.cpp  proplist.hpp  space.cpp  space.hpp  system.cpp  system.h
hdk_utils/: CMakeLists.txt  package.yaml
kip/nuke/: .project  CMakeLists.txt  package.yaml
kip/nuke/docs/: index.rst
miki/: CMakeLists.txt  package.yaml
miki/docs/: conf.py  index.rst
miki/docs/static/: miki_icon.xcf
miki/docs/technical/: autodoc.rst  builder.rst  command_line.rst  errors.rst  index.rst  sphinx_config.rst  structure.rst
miki/docs/user/: building.rst  configuring.rst  doxygen.rst  editing.rst  index.rst  setup.rst  templates.rst  tutorial.rst
miki/runtimes/: miki
miki/sources/miki/: __init__.py  autodoc.py  builder.py  config.py  errors.py  sphinx_config.py  structure.py
miki/tests/unit/: __init__.py  test_miki.py
napalm/core/napalm/: CMakeLists.txt
napalm/core/pylib/: AttribTableBind.cpp  BufferBind.cpp  CMakeLists.txt  ExceptionsBind.cpp  ExceptionsBind.hpp  FreeBind.cpp  ObjectBind.cpp  ObjectTableBind.cpp  PodBind.cpp  PodBind.hpp  SetBind.hpp  TableBind.cpp  TableBind.hpp  TypedAttribBind.cpp  TypedAttribBind.hpp  TypedBufferBind.cpp  TypedBufferBind.hpp  binding.cpp
napalm/core/test/: CMakeLists.txt  main.cpp  spirit.cpp  test.py
napalm/houdini/trunk/: CMakeLists.txt  package.yaml
napalm/parsing/napalm/: CMakeLists.txt
napalm/parsing/pylib/: CMakeLists.txt  binding.cpp
review_tool/code/: CMakeLists.txt  package.yaml
review_tool/code/contextTool/: ContextSession.py  __init__.py  projectAwareness.py  util.py
review_tool/code/reviewTool/: ContextSession.py  FullContextSession.py  __init__.py  projectAwareness.py  unittest.py  util.py
(+741 files in other folders)
