CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(boost_COMPONENTS python)

drd_find_packages(PREFIX pkgs AUTO)

INCLUDE_DIRECTORIES ( ../lib )

LINK_DIRECTORIES ( lib )

ADD_DEFINITIONS (-DBOOST_PYTHON_MAX_ARITY=17)

ADD_LIBRARY ( pyGrind SHARED
    python.cpp
)

TARGET_LINK_LIBRARIES(pyGrind grind ${pkgs_LIBRARIES})

SET_TARGET_PROPERTIES ( pyGrind PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES ( pyGrind PROPERTIES OUTPUT_NAME "_grind")

INSTALL ( TARGETS pyGrind DESTINATION py/grind )
